@@ -21,7 +21,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import io.fabric8.kubernetes.api.model.Endpoints;
 import io.fabric8.kubernetes.api.model.EndpointsBuilder;
@@ -309,10 +308,8 @@ class Fabric8KubernetesDiscoveryClientTest {
 		List<Endpoints> result_endpoints = discoveryClient.getEndPointsList("endpoint");
 
 		assertThat(result_endpoints).hasSize(2);
-		assertThat(result_endpoints.stream()
-			.map(Endpoints::getMetadata)
-			.map(ObjectMeta::getNamespace)
-			.collect(Collectors.toList())).containsOnly(namespace1, namespace3);
+		assertThat(result_endpoints.stream().map(Endpoints::getMetadata).map(ObjectMeta::getNamespace).toList())
+			.containsOnly(namespace1, namespace3);
 	}
 
 	@Test
